# vlc_module.rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs  traits.rs  vlc.rs
src/ffi/: definitions.rs  mod.rs
