[package]
name = "vlc_module"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
build = "build.rs"

[features]
link-vlc = []
default = ["link-vlc"]

[dependencies]
libc = "^0.2.0"

[build-dependencies.bindgen]
version = "^0.20"
features = ["llvm_stable"]

#[build-dependencies.libbindgen]
#git = "https://github.com/servo/rust-bindgen"
#features = ["llvm_stable"]

